# chatbot-task-bot

./: .env.test  README.md  pyproject.toml
src/: __init__.py  app.py
src/bots/: __init__.py  query_bot.py
src/core/: __init__.py  config.py  exceptions.py
src/integration/: backend.py  utils.py
